--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-.body{
-  font-family: 'Nunito', sans-serif;
-
-}
-
-.main{
-  font-family: 'Nunito', sans-serif;
-
-}
-
 .Header{
   font-family: 'Nunito', sans-serif;
   display: flex;
@@ -22,26 +12,34 @@
   justify-content: space-between;
   flex-direction: column;
   flex-grow: 5;
-
 }
 
 .Title h1{
+  color: #f86832;
   margin-bottom: 0px;
-  /* display: flex;
-  justify-content: center;
-  align-content: center; */
 }
+
+
+
 .navBar{
   display: flex;
   justify-content: center;
   align-items: center;
-
+  text-decoration: none;
+  margin-left: 150px;
+  margin-right: 150px;
+  padding: 10px;
+  background-color: #E6E6E6;
+  border-radius: 60px;
 }
 
-.nav{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.navBar nav a{
+  font-size: large;
+  text-decoration: none;
+  color: black;
+}
+.navBar nav a:hover{
+  color: #f86832;
 }
 
 .a{
@@ -54,13 +52,17 @@
 
 .Home{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .mainContainer{
+  font-family: 'Nunito', sans-serif;
+  background-color: #F8F8F8;
+  border-radius: 30px;;
   display: flex;
-  padding: 100px;
-
+  justify-content: center;
+  margin-top: 43px;
+  padding: 0px 100px 100px 100px;
 }
 
 .dinnerContainer{
@@ -68,66 +70,53 @@
   flex-direction: column;
   flex-wrap: wrap;
   flex-shrink: 1;
-  padding-left: 50px;
-  padding-right: 25px;
-  padding-top: 50px;
-  padding-bottom: 50px;
   min-width: 50vw;
-
 }
 
 .drinkContainer{
   display: flex;
   flex-direction: column;
-  padding-left: 25px;
-  padding-right: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-
 }
 
 .dinnerHeaders{
-
-
+  font-family: 'Nunito', sans-serif;
+  font-size: 30px;
 }
 
 .Tagline{
   padding-bottom: 10px;
-
 }
 
 .cuisine{
-
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 270vh;
+  width: 50vw;
 }
 
-.drinks{
-
-}
 
 @media screen and (max-width: 640px) {
-  .Header {
-    flex-direction: column;
-  }
 
-  .Header nav a {
+  .navBar nav{
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
-  .Home{
-    flex-direction: column;
-  }
 
   .mainContainer{
+    margin-top: 10px;
+    padding-top: 10px;
     flex-direction: column;
   }
 
   .dinnerContainer{
-    padding-right: 50px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     flex-wrap: wrap;
-  }
-
-  .drinkContainer{
-    padding-left: 50px;
   }
 
   .cuisine{
